# statement

./: .coveragerc  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pytest.ini  requirements.txt
.github/actions/build_example/: action.yml
.github/actions/make_target/: action.yml
.github/actions/python_venv/: action.yml
.github/workflows/: ci.yml
examples/: Dockerfile.dev_c  Makefile
examples/basic/: CMakeLists.txt  Makefile  basic.yml  project.yml
examples/basic/application/: main.c  main.h
examples/basic/interface/: basic_sm_interface.h
examples/basic/static_outputs/: basic_sm.c  basic_sm.h  basic_sm_priv.h
examples/basic/test_code/: main.c  main.h
examples/basic/unit_test/: test_basic_sm.c
examples/basic/unit_test/support/: basic_sm_interface.h
examples/basic/variable_outputs/: basic_sm_interface.h
scripts/: .clang-tidy  check_eof_newlines.sh  check_xml_field.sh  install_dev_pre_reqs.sh  run_clangtidy.sh  run_cppcheck.sh  setup_venv.sh
src/: main.py
src/statement/: c_data.py  params.py
src/test/: test_c_enum.py  test_params.py
